--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "noaa-solar-calculator",
-  "version": "0.1.0",
-  "description": "Implementation of USA's National Oceanic and Atmospheric Administration (NOAA) Solar Calculator, allowing to find Sunrise, Sunset, Solar Noon and Solar Position for Any Place on Earth",
-  "main": "src/js/index.js",
-  "scripts": {
-    "debug": "node --nolazy --inspect-brk=9229 tests/js/main.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mcxsic/noaa-solar-calculator.git"
-  },
-  "keywords": [
-    "sunset",
-    "sunrise",
-    "solar",
-    "position"
-  ],
-  "author": "Michel Comin <mcxsic>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mcxsic/solar-calculator/issues"
-  },
-  "homepage": "https://github.com/mcxsic/solar-calculator#readme",
-  "dependencies": {}
+    "name": "noaa-solar-calculator",
+    "version": "0.1.0",
+    "description": "Implementation of USA's National Oceanic and Atmospheric Administration (NOAA) Solar Calculator, allowing to find Sunrise, Sunset, Solar Noon and Solar Position for Any Place on Earth",
+    "main": "src/js/index.js",
+    "scripts": {
+        "debug": "node --nolazy --inspect-brk=9229 tests/js/solarCalculatorTest.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mcxsic/noaa-solar-calculator.git"
+    },
+    "keywords": [
+        "sunset",
+        "sunrise",
+        "solar",
+        "position"
+    ],
+    "author": "Michel Comin <mcxsic>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/mcxsic/solar-calculator/issues"
+    },
+    "homepage": "https://github.com/mcxsic/solar-calculator#readme",
+    "dependencies": {}
 }
